--- a/site/config/packages/doctrine.yaml
+++ b/site/config/packages/doctrine.yaml
@@ -4,13 +4,14 @@ doctrine:
 
         # IMPORTANT: You MUST configure your db driver and server version,
         # either here or in the DATABASE_URL env var (see .env file)
-        #driver: 'mysql'
+        driver: 'pdo_pgsql'
         #server_version: '5.7'
+        charset: utf8
 
         # Only needed for MySQL (ignored otherwise)
-        charset: utf8mb4
-        default_table_options:
-            collate: utf8mb4_unicode_ci
+        #charset: utf8mb4
+        #default_table_options:
+            #collate: utf8mb4_unicode_ci
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
