--- a/site/composer.json
+++ b/site/composer.json
@@ -28,7 +28,8 @@
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "4.3.*",
         "symfony/web-link": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+        "twig/extensions": "^1.5"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
