--- a/site/.gitignore
+++ b/site/.gitignore
@@ -6,6 +6,7 @@
 /public/bundles/
 /var/
 /vendor/
+/public/images/publications/
 ###< symfony/framework-bundle ###
 
 ###> symfony/phpunit-bridge ###
