--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -13,26 +13,29 @@ services:
     db:
         image: postgres:12.0 # set version to 9 if you encounter problems.
         volumes:
-            - ../docker/postgres/logs:/var/log/postgresql
-            - ../docker/postgres/datas:/var/lib/postgresql/data
-            - ../simple-course.sql:/docker-entrypoint-initdb.d/simple-course.sql
+            - ./docker/postgres/logs:/var/log/postgresql
+            - ./docker/postgres/datas:/var/lib/postgresql/data
+            - ../sql/create_database.sql:/docker-entrypoint-initdb.d/bde.sql
         ports:
             - 5432:5432
         environment:
-            - POSTGRES_PASSWORD=root
+            - POSTGRES_PASSWORD=changeme
             - POSTGRES_USER=postgres
-            - POSTGRES_DB=applicationbde
+            - POSTGRES_DB=bde
 
             
-    phppgadmin:
-        image: dockage/phppgadmin
+    pgadmin:
+        container_name: pgadmin_container
+        image: dpage/pgadmin4
+        environment:
+            PGADMIN_DEFAULT_EMAIL: postgres
+            PGADMIN_DEFAULT_PASSWORD: changeme
+            PG_DATABASE: simple-course
+            PG_USER: postgres
+            PG_PASSWORD: changeme
+        volumes:
+            - ./docker/pgadmin:/root/.pgadmin
         ports:
             - 8081:80
-        environment:
-            - PHP_PG_ADMIN_SERVER_DESC=PostgreSQL
-            - PHP_PG_ADMIN_SERVER_HOST=db
-            - PHP_PG_ADMIN_SERVER_PORT=5432
-            - PHP_PG_ADMIN_SERVER_SSL_MODE=allow
-
         links:
             - db:postgres
