--- a/site/.env
+++ b/site/.env
@@ -26,7 +26,7 @@ APP_SECRET=6cb13ad3f981119652ecd0d11e8cefee
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11"
 # IMPORTANT: You MUST configure your db driver and server version, either here or in config/packages/doctrine.yaml
 #DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
-DATABASE_URL=postgresql://postgres:root@127.0.0.1:5432/bde?serverVersion=12
+DATABASE_URL=postgresql://postgres:changeme@db:5432/bde?serverVersion=12
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
